[package]
name = "proxmox-auth-api"
description = "Tickets, API and Realm handling"
version = "1.0.3"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[example]]
name = "passwd"
required-features = [ "pam-authenticator" ]

[dependencies]
anyhow.workspace = true
const_format = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
log = { workspace = true, optional = true }
http = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
nix = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
pam-sys = { workspace = true, optional = true }
percent-encoding = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = [ "derive" ] }
serde_json = { workspace = true, optional = true }
serde_plain = { workspace = true, optional = true }

proxmox-base64 = { workspace = true, optional = true }
proxmox-http = { workspace = true, optional = true, features = ["body"] }
proxmox-product-config = { workspace = true, optional = true }
proxmox-rest-server = { workspace = true, optional = true }
proxmox-router = { workspace = true, optional = true }
proxmox-schema = { workspace = true, optional = true, features = [ "api-macro", "api-types" ] }
proxmox-sys = { workspace = true, optional = true }
proxmox-tfa = { workspace = true, optional = true, features = [ "api" ] }
proxmox-time = { workspace = true, optional = true }

[features]
default = []

ticket = [ "dep:percent-encoding", "dep:openssl", "dep:proxmox-base64" ]
api-types = [ "dep:const_format", "dep:regex", "dep:serde", "dep:serde_plain", "dep:proxmox-schema" ]
api = [
    "api-types",
    "ticket",

    "dep:http",
    "dep:hyper",
    "dep:serde_json",

    "dep:proxmox-http",
    "dep:proxmox-rest-server",
    "dep:proxmox-router",
    "dep:proxmox-tfa",
    "dep:proxmox-time",
]
pam-authenticator = [ "api", "dep:libc", "dep:log", "dep:pam-sys" ]
password-authenticator = [
    "api",
    "dep:log",
    "dep:nix",
    "dep:proxmox-product-config",
    "dep:proxmox-sys",
    "proxmox-sys?/crypt",
]
