[package]
name = "proxmox-borrow"
description = "contains the Tied type to tie a value with a lifetime to the value it borrows from"
version = "1.1.0"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
