[package]
name = "proxmox-client"
version = "0.2.2"
description = "Base client for proxmox APIs for handling login and ticket renewal"
authors.workspace = true
license.workspace = true
edition.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hex.workspace = true
http.workspace = true
once_cell.workspace = true
percent-encoding.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true

# wasm-incompatible dependencies must stay optional
log = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }

proxmox-login = { workspace = true, features = [ "http" ] }
webauthn-rs = { workspace = true, optional = true }

proxmox-http = { workspace = true, optional = true, features = [ "client" ] }
hyper = { workspace = true, optional = true }

proxmox-section-config.workspace = true
proxmox-schema = { workspace = true, features = [ "api-macro" ] }

[features]
default = []
hyper-client = [ "dep:openssl", "dep:hyper", "dep:proxmox-http", "dep:log" ]
webauthn = [ "dep:webauthn-rs", "proxmox-login/webauthn" ]
