[package]
name = "proxmox-client"
description = "Base client for proxmox APIs for handling login and ticket renewal"
version = "0.5.0"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true

# wasm-incompatible dependencies must stay optional
log = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }

proxmox-login = { workspace = true, features = [ "http" ] }

proxmox-http = { workspace = true, optional = true, features = [ "client" ] }
hyper = { workspace = true, optional = true }

[features]
default = []
hyper-client = [ "dep:openssl", "dep:hyper", "dep:proxmox-http", "dep:log" ]
webauthn = [ "proxmox-login/webauthn" ]
