[package]
name = "proxmox-compression"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "contains compression utilitites (such as an Zip Encoder for async rust)"

exclude.workspace = true

[dependencies]
anyhow.workspace = true
bytes = "1.0"
crc32fast = "1"
endian_trait.workspace = true
flate2 = "1.0"
futures.workspace = true
libc.workspace = true
tokio = { workspace = true, features = [ "fs", "io-util"] }
walkdir = "2"
tar = "0.4"
zstd.workspace = true

proxmox-time = { path = "../proxmox-time", version = "1" }
proxmox-io = { path = "../proxmox-io", version = "1", features = [ "tokio" ] }
proxmox-lang = { path = "../proxmox-lang", version = "1.1" }

[dev-dependencies]
tokio = { workspace = true, features = [ "macros" ] }

