[package]
name = "proxmox-daemon"
description = """
Daemon state handling (catching reload signals, registering commands with the command socket, ...)
"""
version = "0.1.2"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
libc.workspace = true
log.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt", "signal", "sync"] }

proxmox-sys.workspace = true
proxmox-systemd.workspace = true
