[package]
name = "proxmox-deb-version"
description = "simple debian version comparision"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
