[package]
name = "proxmox-dns-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
description = "DNS Management API implementation"

[dependencies]
anyhow.workspace = true
const_format.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }

proxmox-config-digest.workspace = true
proxmox-schema = { workspace = true, features = ["api-macro", "api-types"] }

proxmox-sys = { workspace = true, optional = true }
proxmox-time = { workspace = true, optional = true }
proxmox-product-config = { workspace = true, optional = true }

[features]
default = []
impl = [
    "dep:proxmox-product-config",
    "proxmox-config-digest/openssl",
    "dep:proxmox-sys",
    "dep:proxmox-time",
]
