[package]
name = "proxmox-dns-api"
version = "0.1.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
description = "DNS Management API implementation"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
const_format.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }

proxmox-config-digest.workspace = true
proxmox-schema = { workspace = true, features = ["api-macro", "api-types"] }

proxmox-sys = { workspace = true, optional = true }

[features]
default = []
impl = [
    "proxmox-config-digest/openssl",
    "dep:proxmox-sys",
]
