[package]
name = "proxmox-dns-api"
description = "DNS Management API implementation"
version = "1.0.1"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
const_format.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }

proxmox-config-digest.workspace = true
proxmox-schema = { workspace = true, features = ["api-macro", "api-types"] }

proxmox-sys = { workspace = true, optional = true }

[features]
default = []
impl = [
    "proxmox-config-digest/openssl",
    "dep:proxmox-sys",
]
