[package]
name = "proxmox-docgen"
description = "Library to easily create documentation from Rust sources for Proxmox projects."
version = "1.0.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true

proxmox-router.workspace = true
proxmox-schema = { workspace = true }


