[package]
name = "proxmox-fixed-string"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
rust-version = "1.87"

[dependencies]
serde.workspace = true
serde_plain.workspace = true
