[package]
name = "proxmox-http-error"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proxmox HTTP Error"

exclude.workspace = true

[dependencies]
anyhow.workspace = true
http.workspace = true
serde.workspace = true
