[package]
name = "proxmox-http-error"
description = "Proxmox HTTP Error"
version = "1.0.0"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
http.workspace = true
serde.workspace = true
