[package]
name = "proxmox-http"
description = "Proxmox HTTP library"
version = "1.0.4"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true, features = ["http2"] }
native-tls = { workspace = true, optional = true }
openssl =  { version = "0.10", optional = true }
serde_json = { workspace = true, optional = true }
sync_wrapper = { workspace = true, optional = true }
tokio = { workspace = true, features = [], optional = true }
tokio-openssl = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
ureq = { version = "3.0", features = ["native-tls"], optional = true, default-features = false }
url = { workspace = true, optional = true }

proxmox-async = { workspace = true, optional = true }
proxmox-base64 = { workspace = true, optional = true }
proxmox-rate-limiter = { workspace = true, optional = true, features = [ "rate-limiter" ] }
proxmox-sys = { workspace = true, optional = true }
proxmox-io = { workspace = true, optional = true }
proxmox-lang = { workspace = true, optional = true }
proxmox-compression = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = [ "macros" ] }
flate2 = { workspace = true }

[features]
default = []

body = [
    "dep:bytes",
    "dep:futures",
    "dep:http-body",
    "dep:http-body-util",
    "dep:hyper",
    "dep:sync_wrapper",
    "sync_wrapper?/futures",
]
rate-limited-stream = [
    "dep:tokio",
    "dep:hyper-util",
    "hyper-util?/client",
    "hyper-util?/client-legacy",
    "hyper-util?/http1",
    "tokio?/time",
    "dep:proxmox-rate-limiter",
]
client = [
    "dep:bytes",
    "dep:futures",
    "dep:http-body",
    "dep:http-body-util",
    "dep:hyper-util",
    "dep:openssl",
    "dep:proxmox-compression",
    "dep:tokio",
    "dep:tokio-openssl",
    "dep:tower-service",
    "hyper?/client",
    "hyper?/http1",
    "hyper?/http2",
    "hyper-util?/client",
    "hyper-util?/client-legacy",
    "hyper-util?/http1",
    "hyper-util?/tokio",
    "tokio?/io-util",
    "body",
    "http-helpers",
    "rate-limited-stream",
]
client-sync = [ "client-trait", "http-helpers", "dep:ureq", "dep:native-tls" ]
client-trait = [ "dep:http" ]
http-helpers = [ "dep:http", "dep:proxmox-base64", "dep:proxmox-sys", "dep:serde_json", "dep:url" ]
websocket = [
    "dep:futures",
    "dep:http",
    "dep:openssl",
    "dep:proxmox-base64",
    "dep:proxmox-io",
    "dep:proxmox-lang",
    "dep:proxmox-sys",
    "dep:tokio",
    "proxmox-io?/tokio",
    "tokio?/io-util",
    "tokio?/sync",
    "body",
]
