[package]
name = "proxmox-human-byte"
description = "Proxmox library for formatting byte sizes (IEC or SI)"
version = "0.1.3"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
proxmox-schema = { workspace = true, features = ["api-macro"]}
proxmox-serde.workspace = true
serde.workspace = true
