[package]
name = "proxmox-ini"
description = "INI format support for serde"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde = { workspace = true, features = ["derive"] }
