[package]
name = "proxmox-installer-types"
description = "Type definitions used within the installer"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_plain.workspace = true
proxmox-network-types.workspace = true
proxmox-node-status.workspace = true

[features]
default = []
# enable old-style answer file keys with underscores for backwards compatibility
legacy = []
