[package]
name = "proxmox-installer-types"
description = "Type definitions used within the installer"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_plain.workspace = true
regex = { workspace = true, optional = true }
proxmox-network-types.workspace = true
proxmox-schema = { workspace = true, optional = true, features = ["api-macro"] }
proxmox-section-config = { workspace = true, optional = true }
proxmox-node-status.workspace = true

[features]
default = []
api-types = ["dep:regex", "dep:proxmox-schema", "dep:proxmox-section-config", "proxmox-network-types/api-types"]
# enable old-style answer file keys with underscores for backwards compatibility
legacy = []

[dev-dependencies]
toml = "0.8"
