[package]
name = "proxmox-io"
description = "extension traits for Read and Write"
version = "1.2.1"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
endian_trait = { workspace = true, features = ["arrays"] }
# this is also the feature name:
tokio = { workspace = true, features = [ "io-util" ], optional = true }
